--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <p>Introduce un número (con o sin decimales) y explora sus diferentes lecturas.</p>
         </header>
 
-        <div class="input-section">
-            <label for="numero">Introduce el número:</label>
-            <input type="text" id="numero" placeholder="Ej: 1234,56" autocomplete="off">
-        </div>
+        <div class="contenedor">
+    <label for="numero">Introduce el número:</label>
+    <input type="text" id="numero" placeholder="Ej: 1234,56" autocomplete="off">
+  </div>
 
         <div class="card">
             <h2>Lectura Simple</h2>
