--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Introduce un número (con o sin decimales) y explora sus diferentes lecturas.</p>
         </header>
 
-        <div class="contenedor">
+        <div class="card contenedor">
     <label for="numero">Introduce el número:</label>
     <input type="text" id="numero" placeholder="Ej: 1234,56" autocomplete="off">
   </div>
@@ -26,7 +26,7 @@
             <div id="resultado" class="result-box">
                 <span class="placeholder-text">La lectura del número aparecerá aquí.</span>
             </div>
-            <button id="play-simple-btn" class="play-btn">▶️ Escuchar</button>
+            <button id="play-simple-btn" class="play-btn">▶️ <span>Escuchar</span></button>
         </div>
 
         <div class="card">
@@ -34,7 +34,7 @@
             <div id="aprendizaje-fonetico-resultado" class="result-box phonetic-box">
                  <span class="placeholder-text">Desglose fonético...</span>
             </div>
-            <button id="play-phonetic-btn" class="play-btn">▶️ Escuchar y Resaltar</button>
+            <button id="play-phonetic-btn" class="play-btn">▶️ <span>Escuchar y Resaltar</span></button>
         </div>
 
         <div class="card">
@@ -42,7 +42,7 @@
             <div id="aprendizaje-formal-wrapper" class="result-box svg-box">
                  <span class="placeholder-text">Representación gráfica...</span>
             </div>
-            <button id="play-formal-btn" class="play-btn">▶️ Escuchar y Resaltar</button>
+            <button id="play-formal-btn" class="play-btn">▶️ <span>Escuchar y Resaltar</span></button>
         </div>
     </div>
 
