Theme automatico genre

--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     </div>
 
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="theme-generator.js"></script>
 </body>
 </html>
